2006-05-02  Dan Winship  <danw@novell.com>

	* plugins/gconf-dump.c: rewrite to make compiz.schema regeneration
	a little easier, and to make it possible to generate schema files
	for third-party plugins. Include plugin descriptions and
	dependency information in the schema.

	* plugins/Makefile.am: add a rule to generate compiz.schemas

	* plugins/compiz.schemas: regen

	* plugins/cube.c, plugins/decoration.c, plugins/fade.c,
	plugins/gconf.c, plugins/minimize.c, plugins/wobbly.c:
	s/expose/scale/ in dependencies

2006-05-02  David Reveman  <davidr@novell.com>

	* include/compiz.h:
	* configure.ac: Don't require glproto, include necessary enums in
	compiz.h.

	* src/texture.c:
	* include/compiz.h: Update to latest EXT_tfp spec. Requires an
	X server that has also been updated.

	* configure.ac: Require glproto >= 1.4.7 with final EXT_tfp tokens.

2006-05-01  David Reveman  <davidr@novell.com>

	* src/window.c (circulateWindow):
	* src/event.c (handleEvent): Use getTopWindow instead of
	reverseWindows->id as reverseWindows might be a destroyed window.

	* include/compiz.h:
	* src/screen.c: Add getTopWindow function that returns top window.

2006-04-30  David Reveman  <davidr@novell.com>

	* plugins/compiz.schemas: Regen.

	* plugins/decoration.c (decorWindowUpdate): Don't decorate fullscreen
	windows.

	* plugins/cube.c: Add initial support for unfolding the cube. Default
	key-binding is <Control><Alt>Down.

	* plugins/rotate.c (rotateHandleEvent): Fix absolute rotation.

	* plugins/switcher.c: Fix so that bring-to-front doesn't change
	the actual stacking order.
	Add zoom option, enable it by default so it gets some testing.
	Made bring-to-front enabled by default as it makes zoom functionality
	more useful.
	Made switcher window always rendered above all other windows and
	not affected by screen transformations.

	* src/event.c (handleEvent): Send configure notify before mapping
	window if PPosition or USPosition is set.
